fix(component-viewer) - annotation for components now working on ie8, clean up and style fixing.

--- a/src/components/_app-debug/app-debug.css
+++ b/src/components/_app-debug/app-debug.css
@@ -2,6 +2,7 @@
 .debug-component {
 	outline: 2px solid black;
 	outline-offset: -2px;
+	position:relative;
 }
 
 .debug-label {
